--- a/training/templates/college_project.html
+++ b/training/templates/college_project.html
@@ -219,8 +219,8 @@ Working on a real project is a big thing in today's world. The training institut
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="title">
-                    <h2>College - Internship</h2>
-                    <p>During college internship we will provide you a professional learning experience related to your field of interest. We focus on practical work more than theory sessions so that you are aware about the real time work of industry. During college internship you will learn new technical skills, professional skills which enhance your career. This will help in your future jobs. During college internship, you also that what you learn in college sessions and how much it will help you in real time experience. We provide you real time exerience of challenges you will face in future so that you can aware about that.</p>
+                    <h2>College Project</h2>
+                    <p>Way To Code Technologies provide college project training in various technologies. We provide college project training to BCA, MCA, B.Sc Computer,Diploma Students, Engineering students. We help you in your college project. We help you in challenges whatever you are facing to develop it. We give you excercise, tasks to learn you things better and also provide interview guidance, so with the college project you gain the knowledge of technologies as well as interview structure.</p>
                     <a href="#" title="">Schedule Demo</a>
                  </div>
             </div>
