--- a/training/templates/header.html
+++ b/training/templates/header.html
@@ -40,11 +40,11 @@
                         <li class="nav-item"><a href="{% url 'livetraining' %}" class="nav-link">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="{% url 'livetraining' %}" class="nav-link">Live Training</a></li>
-                                <li class="nav-item"><a href="course.html" class="nav-link">College Internship</a></li>
-                                <li class="nav-item"><a href="course.html" class="nav-link">College Project</a></li>
-                                <li class="nav-item"><a href="course.html" class="nav-link">Industrial Training</a></li>
-                                <li class="nav-item"><a href="course.html" class="nav-link">Online Training</a></li>
-                                <li class="nav-item"><a href="course.html" class="nav-link">Job-Oriented Training</a></li>                            </ul>
+                                <li class="nav-item"><a href="{% url 'collegeinternship' %}" class="nav-link">College Internship</a></li>
+                                <li class="nav-item"><a href="{% url 'collegeproject' %}" class="nav-link">College Project</a></li>
+                                <li class="nav-item"><a href="{% url 'industrialtraining' %}" class="nav-link">Industrial Training</a></li>
+                                <li class="nav-item"><a href="{% url 'onlinetraining' %}" class="nav-link">Online Training</a></li>
+                                <li class="nav-item"><a href="{% url 'joboriented' %}" class="nav-link">Job-Oriented Training</a></li>                            </ul>
                         </li>
                         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Tutorials</a>
