--- a/training/templates/industrial_training.html
+++ b/training/templates/industrial_training.html
@@ -219,8 +219,9 @@ Working on a real project is a big thing in today's world. The training institut
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="title">
-                    <h2>College - Internship</h2>
-                    <p>During college internship we will provide you a professional learning experience related to your field of interest. We focus on practical work more than theory sessions so that you are aware about the real time work of industry. During college internship you will learn new technical skills, professional skills which enhance your career. This will help in your future jobs. During college internship, you also that what you learn in college sessions and how much it will help you in real time experience. We provide you real time exerience of challenges you will face in future so that you can aware about that.</p>
+                    <h2>Industrial Training</h2>
+                    <p>We provide students industrial training in Java, Android, IOS, Flutter, Python, Django, PHP, Angular, ROR & GO Language,Web Design, Graphics Design, Asp.Net and other programming languages. During industrial training students will gain experience of real time industrial jobs. We will aware you about the new technical things which are currently used in market.We prepare you for future jobs challenges and you can easily deal with it. We provide industrial training for Engineering students, BCA,MCA students, Diploma student,ITI computer background students and all students who are from computer science background.
+                    </p>
                     <a href="#" title="">Schedule Demo</a>
                  </div>
             </div>
