--- a/training/templates/live_training.html
+++ b/training/templates/live_training.html
@@ -204,7 +204,7 @@ Working on a real project is a big thing in today's world. The training institut
                     </div>
                     <div class="blog_title">
                         <h3><a href="#" title="">Multiple Course</a></h3>
-                        <p>We have multiple courses in latest technologies, so you can choose your course according to your interest and requirement.</p>
+                        <p>We have multiple courses in latest technologies, so you can choose your course according to your requirement.</p>
                     </div>
                 </div>
             </div>
