--- a/training/templates/online_training.html
+++ b/training/templates/online_training.html
@@ -219,8 +219,9 @@ Working on a real project is a big thing in today's world. The training institut
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="title">
-                    <h2>College - Internship</h2>
-                    <p>During college internship we will provide you a professional learning experience related to your field of interest. We focus on practical work more than theory sessions so that you are aware about the real time work of industry. During college internship you will learn new technical skills, professional skills which enhance your career. This will help in your future jobs. During college internship, you also that what you learn in college sessions and how much it will help you in real time experience. We provide you real time exerience of challenges you will face in future so that you can aware about that.</p>
+                    <h2>Online Training</h2>
+                    <p>Online training sessions provide flexibility in learning. Online session reduce hesitations of students. It gives you flexibility you to learn in your suitable time. Online sesion brings to the student's personal growth.We provide you personal online sessions and we teach you every topic deeply so that you can understand importance of it. We take sessions as per your flexible time.By learning online you will learn from any place with flexible work hours in your interest field.
+                    </p>
                     <a href="#" title="">Schedule Demo</a>
                  </div>
             </div>
