--- a/training/templates/job-oriented_training.html
+++ b/training/templates/job-oriented_training.html
@@ -219,8 +219,9 @@ Working on a real project is a big thing in today's world. The training institut
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="title">
-                    <h2>College - Internship</h2>
-                    <p>During college internship we will provide you a professional learning experience related to your field of interest. We focus on practical work more than theory sessions so that you are aware about the real time work of industry. During college internship you will learn new technical skills, professional skills which enhance your career. This will help in your future jobs. During college internship, you also that what you learn in college sessions and how much it will help you in real time experience. We provide you real time exerience of challenges you will face in future so that you can aware about that.</p>
+                    <h2>Job-Oriented Training</h2>
+                    <p>Way To Code Technologies provide you job-oriented training sessions. This session includes work on live projects, placements, life-time validity offer.We provide you job-oriented training with online or by taking live sessions. In this we provide you training on various technologies like App Development, Web Development, Graphics & UI/UX Design, Software Testing, Web designing,Database and all other Programming languages.This is certified training.
+                    </p>
                     <a href="#" title="">Schedule Demo</a>
                  </div>
             </div>
